--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express-session": "^1.18.1",
     "firebase": "^11.2.0",
     "framer-motion": "^11.13.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.453.0",
     "memorystore": "^1.6.7",
